<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <CheckBox
            android:id="@+id/startmonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/week_start"/>

        <!-- CURRENT DATE //-->

        <TextView
            android:id="@+id/currentDateTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/startmonday"
            android:layout_marginTop="10dp"
            android:text="@string/curentdate"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/currentDateTextColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentDateTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_color"
            android:textAppearance="@android:style/TextAppearance"/>

        <de.j4velin.calendarWidget.settings.ColorPreviewButton
            android:id="@+id/currentDateTextColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/currentDateBackgroundColor"
            android:layout_alignStart="@+id/currentDateBackgroundColor"
            android:layout_below="@+id/currentDateTitle"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/currentDateBackgroundColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentDateTextColor"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/background_color"
            android:textAppearance="@android:style/TextAppearance"/>

        <de.j4velin.calendarWidget.settings.ColorPreviewButton
            android:id="@+id/currentDateBackgroundColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignTop="@id/currentDateBackgroundColorLabel"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/currentDateBackgroundColorLabel"/>

        <!-- CURRENT MONTH //-->

        <TextView
            android:id="@+id/currentMonthTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/currentDateBackgroundColor"
            android:layout_marginTop="20dp"
            android:text="@string/current_month"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/currentMonthTextColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentMonthTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_color"
            android:textAppearance="@android:style/TextAppearance"/>

        <de.j4velin.calendarWidget.settings.ColorPreviewButton
            android:id="@+id/currentMonthTextColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/currentMonthBackgroundColor"
            android:layout_alignStart="@+id/currentMonthBackgroundColor"
            android:layout_below="@+id/currentMonthTitle"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/currentMonthBackgroundColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentMonthTextColor"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/background_color"
            android:textAppearance="@android:style/TextAppearance"/>

        <de.j4velin.calendarWidget.settings.ColorPreviewButton
            android:id="@+id/currentMonthBackgroundColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignTop="@id/currentMonthBackgroundColorLabel"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/currentMonthBackgroundColorLabel"/>

        <!-- OTHER DAYS //-->

        <TextView
            android:id="@+id/otherDaysTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/currentMonthBackgroundColor"
            android:layout_marginTop="20dp"
            android:text="@string/other_days"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/otherDaysTextColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/otherDaysTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_color"
            android:textAppearance="@android:style/TextAppearance"/>

        <de.j4velin.calendarWidget.settings.ColorPreviewButton
            android:id="@+id/otherDaysTextColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/otherDaysBackgroundColor"
            android:layout_alignStart="@+id/otherDaysBackgroundColor"
            android:layout_below="@+id/otherDaysTitle"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/otherDaysBackgroundColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/otherDaysTextColor"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/background_color"
            android:textAppearance="@android:style/TextAppearance"/>

        <de.j4velin.calendarWidget.settings.ColorPreviewButton
            android:id="@+id/otherDaysBackgroundColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignTop="@id/otherDaysBackgroundColorLabel"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/otherDaysBackgroundColorLabel"/>

        <!-- WEEKDAY LABELS //-->

        <TextView
            android:id="@+id/weekDayLabelTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/otherDaysBackgroundColor"
            android:layout_marginTop="20dp"
            android:text="@string/day_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/weekDayLabelColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weekDayLabelTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_color"
            android:textAppearance="@android:style/TextAppearance"/>

        <de.j4velin.calendarWidget.settings.ColorPreviewButton
            android:id="@+id/weekDayLabelTextColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/otherDaysBackgroundColor"
            android:layout_alignStart="@+id/otherDaysBackgroundColor"
            android:layout_below="@+id/weekDayLabelTitle"
            android:layout_marginTop="5dp"/>

        <!-- MONTH LABEL //-->

        <TextView
            android:id="@+id/monthLabelTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/weekDayLabelTextColor"
            android:layout_marginTop="20dp"
            android:text="@string/month_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/monthLabelColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/monthLabelTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_color"
            android:textAppearance="@android:style/TextAppearance"/>

        <de.j4velin.calendarWidget.settings.ColorPreviewButton
            android:id="@+id/monthLabelTextColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/otherDaysBackgroundColor"
            android:layout_alignStart="@+id/otherDaysBackgroundColor"
            android:layout_below="@+id/monthLabelTitle"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/monthLabelTextColor"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/month_label_config"
            android:textAppearance="@android:style/TextAppearance"/>

        <!-- Widget color //-->

        <TextView
            android:id="@+id/backgroundTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tip"
            android:layout_marginTop="20dp"
            android:text="@string/background"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/backgroundColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/backgroundTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/background_color"
            android:textAppearance="@android:style/TextAppearance"/>

        <de.j4velin.calendarWidget.settings.ColorPreviewButton
            android:id="@+id/backgroundColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/otherDaysBackgroundColor"
            android:layout_alignStart="@+id/otherDaysBackgroundColor"
            android:layout_below="@+id/backgroundTitle"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/iconsTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/backgroundColorLabel"
            android:layout_marginTop="20dp"
            android:text="@string/prev_next_month_icons"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/iconsColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconsTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/color"
            android:textAppearance="@android:style/TextAppearance"/>

        <Spinner
            android:id="@+id/iconsColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/iconsColorLabel"
            android:layout_below="@id/iconsTitle"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iconsColorLabel"/>

        <TextView
            android:id="@+id/iconTransparencyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconsColorLabel"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/transparency"
            android:textAppearance="@android:style/TextAppearance"
        />

        <ImageView
            android:id="@+id/iconpreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/iconsColorLabel"
            android:src="@drawable/ic_next"/>

        <SeekBar
            android:id="@+id/alpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconsColorLabel"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/iconpreview"
            android:layout_toRightOf="@id/iconTransparencyTitle"
            android:max="255"
            android:progress="255"/>

        <!-- Calendar Event indicators //-->

        <TextView
            android:id="@+id/calendarsTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/alpha"
            android:layout_marginTop="20dp"
            android:text="@string/indicators"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/calendarsExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/calendarsTitle"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="Shows a dot for each event occuring on that day (experimental feature)"
            android:textAppearance="@android:style/TextAppearance"/>

        <LinearLayout
            android:id="@+id/cals"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/calendarsExplain"
            android:orientation="vertical">
        </LinearLayout>

    </RelativeLayout>

</ScrollView>